// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`examples should work 1`] = `
<div
  className="mml-container"
>
  <form
    onSubmit={[Function]}
  >
    <p>
      It looks like your credit card isn't activated yet, activate it now:
    </p>
    <button
      className="mml-btn"
      onClick={[Function]}
      type="submit"
    >
      Activate Card
    </button>
  </form>
</div>
`;

exports[`examples should work 2`] = `
<div
  className="mml-container"
>
  <form
    onSubmit={[Function]}
  >
    <p>
      Did you authorize these last 3 transactions on your account?
    </p>
    <div
      class="mml-card"
    >
      <div
        className="mml-row"
      >
        <div
          className="mml-col-4 mml-align-left"
        >
          <p>
            $15
          </p>
        </div>
        <div
          className="mml-col-8 mml-align-left"
        >
          <p>
            Oren's Hummus
          </p>
        </div>
      </div>
      <div
        className="mml-row"
      >
        <div
          className="mml-col-4 mml-align-left"
        >
          <p>
            $1000
          </p>
        </div>
        <div
          className="mml-col-8 mml-align-left"
        >
          <p>
            Apple monitor stand
          </p>
        </div>
      </div>
      <div
        className="mml-row"
      >
        <div
          className="mml-col-4 mml-align-left"
        >
          <p>
            $60
          </p>
        </div>
        <div
          className="mml-col-8 mml-align-left"
        >
          <p>
            Epic Games Skins
          </p>
        </div>
      </div>
    </div>
    <button
      className="mml-btn"
      onClick={[Function]}
      type="submit"
    >
      Yes
    </button>
    <button
      className="mml-btn"
      onClick={[Function]}
      type="submit"
    >
      No
    </button>
  </form>
</div>
`;

exports[`examples should work 3`] = `
<div
  className="mml-container"
>
  <form
    onSubmit={[Function]}
  >
    <p>
      Happy to setup your new credit card application, what's your 
      <strong>
        yearly
      </strong>
       family income?
    </p>
    <input
      name="email"
      onChange={[Function]}
      type="text"
    />
    <button
      className="mml-btn"
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`examples should work 4`] = `
<div
  className="mml-container"
>
  <form
    onSubmit={[Function]}
  >
    <p>
      Hi Jack, I'm painting John's house, looks like they also need some plumbing work, do any of these times work for you on Saturday?
    </p>
    <div
      class="mml-selectlist"
    >
      <button
        className="mml-btn"
        onClick={[Function]}
        type="submit"
      >
        9:30
      </button>
      <button
        className="mml-btn"
        onClick={[Function]}
        type="submit"
      >
        10:00
      </button>
      <button
        className="mml-btn"
        onClick={[Function]}
        type="submit"
      >
        11:30
      </button>
      <button
        className="mml-btn"
        onClick={[Function]}
        type="submit"
      >
        Nope
      </button>
    </div>
  </form>
</div>
`;

exports[`examples should work 5`] = `
<div
  className="mml-container"
>
  <form
    onSubmit={[Function]}
  >
    <p>
      When would you like to schedule your massage?
    </p>
    <div
      className="mml-scheduler"
    >
      <div
        className="react-datepicker-wrapper"
      >
        <div
          className="react-datepicker__input-container"
        >
          <input
            className=""
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      className="mml-btn"
      onClick={[Function]}
      type="submit"
    >
      Reserve
    </button>
  </form>
</div>
`;

exports[`examples should work 6`] = `
<div
  className="mml-container"
>
  <form
    onSubmit={[Function]}
  >
    <p>
      Here are some front bumpers that will fit your 2018-2019 JL!
    </p>
    <div
      className="mml-carousel"
    >
      <div
        className="slick-slider slick-initialized"
        dir="ltr"
      >
        <button
          className="slick-arrow slick-prev slick-disabled"
          data-role="none"
          onClick={null}
          style={
            Object {
              "display": "block",
            }
          }
          type="button"
        >
           
          Previous
        </button>
        <div
          className="slick-list"
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={null}
          onMouseMove={null}
          onMouseUp={[Function]}
          onTouchCancel={null}
          onTouchEnd={[Function]}
          onTouchMove={null}
          onTouchStart={[Function]}
          style={Object {}}
        >
          <div
            className="slick-track"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            style={
              Object {
                "WebkitTransform": "translate3d(0px, 0px, 0px)",
                "WebkitTransition": "",
                "msTransform": "translateX(0px)",
                "opacity": 1,
                "transform": "translate3d(0px, 0px, 0px)",
                "transition": "",
              }
            }
          >
            <div
              aria-hidden={false}
              className="slick-slide slick-active slick-current"
              data-index={0}
              onClick={[Function]}
              style={
                Object {
                  "outline": "none",
                  "width": 0,
                }
              }
              tabIndex="-1"
            >
              <div>
                <div
                  className="mml-carousel-item"
                  style={
                    Object {
                      "display": "inline-block",
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <img
                    className="mml-image"
                    src="https://turn5.scene7.com/is/image/Turn5/J107329-JL?wid=250&hei=187&op_usm=0.8,1,10,0"
                  />
                  <p>
                    Barricade Adventure HD Front Bumper
                  </p>
                  <p>
                    <strong>
                      $404.99
                    </strong>
                  </p>
                  <button
                    className="mml-btn"
                    onClick={[Function]}
                    type="submit"
                  >
                    View Product
                  </button>
                </div>
              </div>
            </div>
            <div
              aria-hidden={false}
              className="slick-slide slick-active"
              data-index={1}
              onClick={[Function]}
              style={
                Object {
                  "outline": "none",
                  "width": 0,
                }
              }
              tabIndex="-1"
            >
              <div>
                <div
                  className="mml-carousel-item"
                  style={
                    Object {
                      "display": "inline-block",
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <img
                    className="mml-image"
                    src="https://turn5.scene7.com/is/image/Turn5/J116651?wid=250&hei=187&op_usm=0.8,1,10,0"
                  />
                  <p>
                    Barricade Adventure HD Front Bumper w/ LED Fog Lights & 20 in. LED Light Bar
                  </p>
                  <p>
                    <strong>
                      $529.99
                    </strong>
                  </p>
                  <button
                    className="mml-btn"
                    onClick={[Function]}
                    type="submit"
                  >
                    View Product
                  </button>
                </div>
              </div>
            </div>
            <div
              aria-hidden={false}
              className="slick-slide slick-active"
              data-index={2}
              onClick={[Function]}
              style={
                Object {
                  "outline": "none",
                  "width": 0,
                }
              }
              tabIndex="-1"
            >
              <div>
                <div
                  className="mml-carousel-item"
                  style={
                    Object {
                      "display": "inline-block",
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <img
                    className="mml-image"
                    src="https://turn5.scene7.com/is/image/Turn5/J127063-JL?wid=250&hei=187&op_usm=0.8,1,10,0"
                  />
                  <p>
                    Barricade HD Front Bumper w/ 20 in. Light Bar
                  </p>
                  <p>
                    <strong>
                      $549.99
                    </strong>
                  </p>
                  <button
                    className="mml-btn"
                    onClick={[Function]}
                    type="submit"
                  >
                    View Product
                  </button>
                </div>
              </div>
            </div>
            <div
              aria-hidden={true}
              className="slick-slide"
              data-index={3}
              onClick={[Function]}
              style={
                Object {
                  "outline": "none",
                  "width": 0,
                }
              }
              tabIndex="-1"
            >
              <div>
                <div
                  className="mml-carousel-item"
                  style={
                    Object {
                      "display": "inline-block",
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <img
                    className="mml-image"
                    src="https://turn5.scene7.com/is/image/Turn5/J116311?wid=250&hei=187&op_usm=0.8,1,10,0"
                  />
                  <p>
                    RedRock 4x4 Avenger Full Width Front Bumper w/o Winch Plate
                  </p>
                  <p>
                    <strong>
                      $729.99
                    </strong>
                  </p>
                  <button
                    className="mml-btn"
                    onClick={[Function]}
                    type="submit"
                  >
                    View Product
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          className="slick-arrow slick-next"
          data-role="none"
          onClick={[Function]}
          style={
            Object {
              "display": "block",
            }
          }
          type="button"
        >
           
          Next
        </button>
        <ul
          className="slick-dots"
          onMouseEnter={null}
          onMouseLeave={null}
          onMouseOver={null}
          style={
            Object {
              "display": "block",
            }
          }
        >
          <li
            className="slick-active"
          >
            <button
              onClick={[Function]}
            >
              1
            </button>
          </li>
          <li
            className=""
          >
            <button
              onClick={[Function]}
            >
              2
            </button>
          </li>
        </ul>
      </div>
    </div>
  </form>
</div>
`;

exports[`examples should work 7`] = `
<div
  className="mml-container"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="mml-row"
    >
      <div
        className="mml-col-10 mml-align-left"
      >
        <p>
          Alert: The server is on fire!!
        </p>
      </div>
      <div
        className="mml-col-2 mml-align-left"
      >
        <div
          class="dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn btn-secondary dropdown-toggle"
            data-toggle="dropdown"
            id="dropdownMenu2"
            type="button"
          >
            ...
          </button>
          <div
            aria-labelledby="dropdownMenu2"
            class="dropdown-menu"
          >
            <button
              className="mml-btn"
              onClick={[Function]}
              type="submit"
            >
              Ignore
            </button>
            <button
              className="mml-btn"
              onClick={[Function]}
              type="submit"
            >
              ReRoute Ticket
            </button>
            <button
              className="mml-btn"
              onClick={[Function]}
              type="submit"
            >
              Turn off the server
            </button>
            <button
              className="mml-btn"
              onClick={[Function]}
              type="submit"
            >
              Book a vacation
            </button>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`examples should work 8`] = `
<div
  className="mml-container"
>
  <form
    onSubmit={[Function]}
  >
    <p>
      Here is your flight info:
    </p>
    <div
      class="mml-card"
    >
      <div
        className="mml-row"
      >
        <div
          className="mml-col-4 mml-align-left"
        >
          <p>
            San Francisco
          </p>
        </div>
        <div
          className="mml-col-4 mml-align-left"
        />
        <div
          className="mml-col-4 mml-align-right"
        >
          <p>
            New York
          </p>
        </div>
      </div>
      <div
        className="mml-row"
      >
        <div
          className="mml-col-4 mml-align-left"
        >
          <h2>
            SFO
          </h2>
        </div>
        <div
          className="mml-col-4 mml-align-center"
        >
          <i
            class="material-icons"
          >
            flight
          </i>
        </div>
        <div
          className="mml-col-4 mml-align-right"
        >
          <h2>
            JFK
          </h2>
        </div>
      </div>
      <div
        className="mml-row"
      >
        <div
          className="mml-col-4 mml-offset-4 mml-align-center"
        >
          <button
            className="mml-btn"
            onClick={[Function]}
            type="submit"
          >
            
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`invalid MML 1 1`] = `
<div
  className="mml-container"
>
  This chat message has invalid formatting and can't be shown
</div>
`;

exports[`invalid MML 2 1`] = `
<div
  className="mml-container"
/>
`;

exports[`mml name and simple text field 1`] = `
<div
  className="mml-container"
>
  <p>
    hi
  </p>
</div>
`;

exports[`mml with button 1`] = `
<div
  className="mml-container"
>
  <form
    onSubmit={[Function]}
  >
    <p>
      It looks like your credit card isn't activated yet, activate it now:
    </p>
    <button
      className="mml-btn"
      onClick={[Function]}
      type="submit"
    >
      Activate Card
    </button>
  </form>
</div>
`;

exports[`only supported attributes are allowed 1`] = `
<div
  className="mml-container"
>
  <p>
    hi
  </p>
</div>
`;

exports[`simple carousel 1`] = `
<div
  className="mml-container"
/>
`;

exports[`simple input 1`] = `
<div
  className="mml-container"
>
  <form
    onSubmit={[Function]}
  >
    <input
      name="name"
      onChange={[Function]}
      value="John"
    />
  </form>
</div>
`;
